--- a/app/views/cuadernos_controles/new.html.erb
+++ b/app/views/cuadernos_controles/new.html.erb
@@ -1,4 +1,6 @@
-<h1>Registrar cuaderno de control</h1>
+<div data-role="header">
+  <h1>Registrar cuaderno de control</h1>
+</div>
 
 <%= render 'form' %>
 
