--- a/app/views/cuadernos_controles/index.html.erb
+++ b/app/views/cuadernos_controles/index.html.erb
@@ -1,29 +1,18 @@
-<h1>Listing cuadernos_controles</h1>
+<div data-role="header">
+  <h1>Cuaderno de control</h1>
+  <%= link_to 'Agregar', new_cuaderno_control_path, "data-icon" => "plus", "class" => "ui-btn-right" %>
+</div>
 
-<table>
-  <tr>
-    <th>Seccion</th>
-    <th>Fecha</th>
-    <th>Estado</th>
-    <th>Usuario</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @cuadernos_controles.each do |cuaderno_control| %>
-  <tr>
-    <td><%= cuaderno_control.seccion_id %></td>
-    <td><%= cuaderno_control.fecha %></td>
-    <td><%= cuaderno_control.estado %></td>
-    <td><%= cuaderno_control.usuario %></td>
-    <td><%= link_to 'Show', cuaderno_control %></td>
-    <td><%= link_to 'Edit', edit_cuaderno_control_path(cuaderno_control) %></td>
-    <td><%= link_to 'Destroy', cuaderno_control, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Cuaderno control', new_cuaderno_control_path %>
+<div data-role="content">
+  <ul data-role="listview" data-filter="true" data-inset="true">
+    <% @cuadernos_controles.each do |cuaderno_control| %>
+    <li data-filtertext="<%= "#{cuaderno_control.fecha} #{Seccion.find(cuaderno_control.seccion_id).grado_seccion}" %>" >
+      <%= link_to cuaderno_control do %>
+        <%= "#{cuaderno_control.fecha} | #{Seccion.find(cuaderno_control.seccion_id).grado_seccion} | #{ListaValor.find_by_tabla_and_item(5, cuaderno_control.estado).descripcion}" %> 
+        
+      <% end %>
+      <%= link_to 'Eliminar', cuaderno_control, confirm: '¿Seguro que desea eliminar el registro?', method: :delete, "data-icon" => "delete" %>      
+    </li>
+    <% end  %>
+  </ul>
+</div>
