--- a/app/views/cuaderno_controles_eventos/new.html.erb
+++ b/app/views/cuaderno_controles_eventos/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New cuaderno_control_evento</h1>
+<div data-role="header">
+  <h1>Nuevo evento</h1>
+  <%= link_to 'Regresar', @cuaderno_control %>
+</div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', cuaderno_controles_eventos_path %>
+
