--- a/app/views/cuadernos_controles/_form.html.erb
+++ b/app/views/cuadernos_controles/_form.html.erb
@@ -11,12 +11,12 @@
     </div>
   <% end %>
 
-  <div class="field" style="float:right">
+  <div class="field">
     <% fecha_actual = Date.current %>
-    <%= f.text_field :fecha, :readonly => true, :value => fecha_actual,  "data-mini" => "true", "style" => "width:80px" %>
+    Fecha: <%= f.text_field :fecha, :readonly => true, :value => fecha_actual,  "data-mini" => "true", "style" => "width:80px" %>
     
   </div>
-  <div class="field" style="width:30%; float:left">
+  <div class="field">
     Sección: <%= collection_select(:cuaderno_control, :seccion_id, Seccion.all, :id, :grado_seccion, {}, {"data-mini" => "true"}) %>
   </div>
   <div class="field">
@@ -25,8 +25,9 @@
     <!--%= collection_select(:cuaderno_control, :estado, ListaValor.where("tabla = 5"), :item, :descripcion, {}, {"data-mini" => "true"}) %-->
   </div>
   <div class="field">
-    <%= f.hidden_field :usuario, :value => "dirceu" %>
+    <%= f.hidden_field :usuario, :value => current_user.usuario %>
   </div>
+<br/>
   <div class="actions">
     <%= f.submit "Grabar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
   </div>
