--- a/app/views/cuaderno_controles_eventos/edit.html.erb
+++ b/app/views/cuaderno_controles_eventos/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing cuaderno_control_evento</h1>
+<div data-role="header">
+  <h1>Modificación de evento (<%= "#{@cuaderno_control.fecha} | #{Seccion.find(@cuaderno_control.seccion_id).grado_seccion}" %> )</h1>
+  <%= link_to 'Regresar', @cuaderno_control %>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @cuaderno_control_evento %> |
-<%= link_to 'Back', cuaderno_controles_eventos_path %>
