--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,10 +26,12 @@
     
       <image src="/assets/logo_small.jpg"/>    
     
+      | <%= link_to "Menu", "/menu.html" %> |
+      
       <% if current_user %>
         Usuario: <%= current_user.usuario %>.
-        <%= link_to "Cerrar sesión", log_out_path %>
-      <% end %> 
+        <%= link_to "Cerrar sesion", log_out_path %> |
+      <% end %>            
     
     <% flash.each do |name, msg| %>
       <%= content_tag :div, msg, :id => "flash_#{name}" %>
