--- a/app/views/cuadernos_controles/show.html.erb
+++ b/app/views/cuadernos_controles/show.html.erb
@@ -22,7 +22,7 @@
 </div>
 
 <% if @cuaderno_control.estado == 1 %>
-<div data-role="header">
-  <%= link_to 'Cerrar', "/cuadernos_controles/#{@cuaderno_control.id}/cerrar", "data-icon" => "back", "class" => "ui-btn-left", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
+<div data-role="footer">
+  <%= link_to 'Cerrar', "/cuadernos_controles/#{@cuaderno_control.id}/cerrar", "class" => "ui-btn-left", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
 </div>  
 <% end %>
