Mejoramiento de apariencia

--- a/app/views/cuaderno_controles_eventos/_form.html.erb
+++ b/app/views/cuaderno_controles_eventos/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@cuaderno_control, @cuaderno_control_evento] do |f| %>
+<%= form_for [@cuaderno_control, @cuaderno_control_evento], :html => { :class => "ui-body ui-body-c" } do |f| %>
   <% if @cuaderno_control_evento.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@cuaderno_control_evento.errors.count, "error") %> prohibited this cuaderno_control_evento from being saved:</h2>
@@ -10,18 +10,17 @@
       </ul>
     </div>
   <% end %>
-
+<div data-role="fieldcontain">
   <div class="field">
-    <%= f.label :tipo_evento_id %><br />
+    Tipo de evento:<br />
     <%= collection_select(:cuaderno_control_evento, :tipo_evento_id, TipoEvento.where("cuaderno_control = 1"), :id, :descripcion, {}, {"data-mini" => "true"}) %>
+    
   </div>
   <div class="field">
-    <%= f.label :alumno_id %><br />
-    <%= collection_select(:cuaderno_control_evento, :alumno_id, Alumno.all, :id, :apellidos_nombres, {:prompt => ':: Seleccione un alumno ::' }, {"data-mini" => "true"}) %>
+    Alumno:<br/><%= collection_select(:cuaderno_control_evento, :alumno_id, Alumno.all, :id, :apellidos_nombres, {:prompt => ':: Seleccione un alumno ::' }, {"data-mini" => "true"}) %>
   </div>
   <div class="field">
-    <%= f.label :descripcion %><br />
-    <%= f.text_area :descripcion %>
+    Descripción:<br/><%= f.text_area :descripcion %>
   </div>
   <div class="field">
     <%= f.hidden_field :usuario, :value => current_user.usuario %>
@@ -30,4 +29,5 @@
   <div class="actions">
     <%= f.submit "Grabar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
   </div>
+</div>
 <% end %>
