--- a/app/views/cuaderno_controles_eventos/_form.html.erb
+++ b/app/views/cuaderno_controles_eventos/_form.html.erb
@@ -17,7 +17,7 @@
     
   </div>
   <div class="field">
-    Alumno:<br/><%= collection_select(:cuaderno_control_evento, :alumno_id, Alumno.all, :id, :apellidos_nombres, {:prompt => ':: Seleccione un alumno ::' }, {"data-mini" => "true"}) %>
+    Alumno:<br/><%= collection_select(:cuaderno_control_evento, :alumno_id, Alumno.pertenecen_a_seccion(@cuaderno_control.seccion_id), :id, :apellidos_nombres, {:prompt => ':: Seleccione un alumno ::' }, {"data-mini" => "true"}) %>
   </div>
   <div class="field">
     Descripción:<br/><%= f.text_area :descripcion %>
