Ajustes verificacion cuaderno control

--- a/app/views/cuaderno_controles_revisiones/verificar.html.erb
+++ b/app/views/cuaderno_controles_revisiones/verificar.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <div data-role="content">
-  <%= form_tag(verificar_cuaderno_control_path 1,201200713, :method => "get") do %>
+  <%= form_tag(consultar_cuaderno_control_path) do %>
     <div data-role="fieldcontain">
       <div class="field">
         <%= label_tag(:seccion_id, "Sección:") %>
