--- a/app/views/alumnos/show.html.erb
+++ b/app/views/alumnos/show.html.erb
@@ -1,29 +1,14 @@
 <div data-role="header">
-  <h1>
-    <%= @alumno.apellidos_nombres %>
-    <%= @cuaderno_control.fecha %>
-  </h1>
-  <%= link_to 'Regresar', cuaderno_controles_revisiones_path, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
+  <h1>Personas vinculadas</h1>
+  <%= link_to 'Regresar', alumnos_path, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
 </div>
 
-<div data-role="content">
-  <ul id='cuaderno_controles_revisiones' data-role="listview" data-filter="true" data-inset="true">
-    <% @cuaderno_control.cuaderno_controles_revisiones.each do |cuaderno_control_revision| %>
-      <% @cuaderno_control.cuaderno_controles_eventos.each do |cuaderno_control_evento| %>
-        <li data-role="list-divider">      
-          <%= TipoEvento.find(cuaderno_control_evento.tipo_evento_id).descripcion %> 
-        </li>
-        <li>
-          <%= simple_format(cuaderno_control_evento.descripcion) %>      
-        </li>
-      <% end %>
-        
-      <% if cuaderno_control_revision.revisado == 0 %>
-        <div data-role="header">
-          <%= check_box_tag "revisado", "Revisado", "no" %>
-          <%= link_to 'Grabar', "#", "class" => "ui-btn-left", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
-        </div>  
-      <% end %>
-    <% end %>
-  </ul>
+<div data-role="header" style="text-align: center" data-theme="c">
+  Alumno: <%= @alumno.apellidos_nombres %>
 </div>
+<%= render @alumno.alumnos_personas_vinculadas %>
+
+<br/>
+Agregar personas vinculadas:
+
+<%= render "alumnos_personas_vinculadas/form" %>
