--- a/app/views/personas_vinculadas/_form.html.erb
+++ b/app/views/personas_vinculadas/_form.html.erb
@@ -48,8 +48,7 @@
     <%= f.text_field :foto %>
   </div>
   <div class="field">
-    <%= f.label :usuario %><br />
-    <%= f.text_field :usuario %>
+    <%= f.hidden_field :usuario, :value => current_user.usuario %>
   </div>
   <div class="actions">
     <%= f.submit %>
